--- a/DemoApp/src/main/webapp/WEB-INF/web.xml
+++ b/DemoApp/src/main/webapp/WEB-INF/web.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd" id="WebApp_ID" version="6.0">
 
-<servlet>
+<!-- <servlet>
 	<servlet-name>servlet1 </servlet-name>
-	<servlet-class>com.teja.servletdemo.AddServlet </servlet-class>
+	<servlet-class>com.teja.servletdemo2.MyServlet </servlet-class>
 </servlet>
 <servlet-mapping> 
 	<servlet-name>servlet1</servlet-name>
-	<url-pattern>/add</url-pattern>
+	<url-pattern>/home</url-pattern>
 </servlet-mapping>
 
-<servlet>
-	<servlet-name>servlet2 </servlet-name>
-	<servlet-class>com.teja.servletdemo.SqServlet </servlet-class>
-</servlet>
-<servlet-mapping> 
-	<servlet-name>servlet2</servlet-name>
-	<url-pattern>/sq</url-pattern>
-</servlet-mapping>
+<context-param>
+	<param-name>name</param-name>
+	<param-value>Teja</param-value>
+</context-param>
+<context-param>
+	<param-name>phone</param-name>
+	<param-value>Samsung</param-value>
+</context-param> -->
 </web-app>
